--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -1,14 +1,17 @@
-.wrapper {
-    width: 100%;
-    height: 100%;
-}
-
-.wrapper:hover {
+.div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     cursor: pointer;
+    transition: transform 0.3s ease;
+
+    &:hover {
+        transform: scale(1.05);
+    }
 }
 
 .img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 240px;
+    border-radius: 8px;
 }
