--- a/src/components/ImageGallery/ImageGallery.module.css
+++ b/src/components/ImageGallery/ImageGallery.module.css
@@ -1,13 +1,12 @@
 .ul {
-    padding: 0 20px;
-    margin: 40px auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 }
 
 .li {
-    flex: 1 1 calc((100% - 15px * 3) / 4);
-    height: 350px;
+    margin: 0;
 }
