--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -1,4 +1,4 @@
-.ReactModal_Overlay {
+.ReactModal__Overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -8,40 +8,41 @@
     width: 100%;
     height: 100%;
 
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 
     opacity: 0;
-    transition: opasity 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out;
 }
 
-.ReactModal_Contact {
+.ReactModal__Content {
     width: 80vw;
-    height: 80 vh;
+    height: 80vh;
+
     position: relative;
 }
 
-.ReactModal_Contact img {
+.ReactModal__Content img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-   
-.ReactModal_Contact svg {
+
+.ReactModal__Content svg {
     position: absolute;
-    top: 40px;
-    right: 40px;
+    top: -40px;
+    right: -40px;
 }
 
-.ReactModal_Contact svg:hover {
+.ReactModal__Content svg:hover {
     cursor: pointer;
 }
 
-.ReactModal_Overlay--after-open {
+.ReactModal__Overlay--after-open {
     opacity: 1;
 }
 
-.ReactModal_Overlay--before-close {
+.ReactModal__Overlay--before-close {
     opacity: 0;
 }
