--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,42 +1,52 @@
-.header {
-    padding: 15px;
-
+.div {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-
-    background-color: #ffb6c1;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
-    .form {
-        width: 30%;
-        min-width: 270px;
-        display: flex;
-        gap: 10px;
-    }
+.label {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-    .input {
-        width: 100%;
-        padding: 7px 15px 7px 40px;
-        border: none;
-        border-radius: 5px;
-    }
+.input,
+.btn {
+    height: 40px;
+    font-size: 20px;
+}
 
-    .btn {
-        padding: 5px 20px;
+.input {
+    width: 240px;
+    border: 1px solid transparent;
+    border-radius: 8px 0 0 8px;
+    background-color: #131212;
+    color: white;
+}
 
-        color: white;
+.input:focus {
+    border: 1px solid #646cff;
+    outline: none;
+}
 
-        border: none;
+.btn {
+    border: 1px solid #131212;
+    border-radius: 0 8px 8px 0;
+    padding: 0 1.2em;
+    background-color: #131212;
+    color: white;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    font-size: 20px;
+}
 
-        border-radius: 5px;
+.btn:hover {
+    border-color: #646cff;
+}
 
-        background-color: #ff758e;
-        transition: background-color 100ms linear; 
-    }
-
-    .btn:hover {
-        cursor: pointer;
-        background-color: rgb(255, 49, 87);
-    }
-    
+.btn:focus {
+    outline: 4px auto -webkit-focus-ring-color;
+}
